arreglando el background del footer

--- a/style.css
+++ b/style.css
@@ -89,7 +89,7 @@ footer{
     padding: 40px;
     width: auto;
     text-align: center;
-    background: url(imagenes/imagenes/bg.jpg);
+    background: url(imagenes/background-footer.jpg);
 }
 
 .Copyright {
